--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@webext-core/messaging": "^2.3.0",
+    "async-mutex": "^0.5.0",
     "class-variance-authority": "^0.7.1",
     "preact": "^10.26.9",
     "tailwind-merge": "^3.3.1"
