fix: fixed pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,13 +23,13 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      # - name: Verify version and tag
-      #   run: |
-      #     APP_VERSION=$(npm pkg get version | tr -d '"{} ')
-      #     if [ "$APP_VERSION" != "${GITHUB_REF#refs/tags/}" ]; then
-      #       echo "Version mismatch: $APP_VERSION != ${GITHUB_REF#refs/tags/}"
-      #       exit 1
-      #     fi
+      - name: Verify version and tag
+        run: |
+          APP_VERSION=$(npm pkg get version | tr -d '"{} ')
+          if [ "$APP_VERSION" != "${GITHUB_REF#refs/tags/}" ]; then
+            echo "Version mismatch: $APP_VERSION != ${GITHUB_REF#refs/tags/}"
+            exit 1
+          fi
 
       - name: Download domain-list
         run: |
