--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jiminy",
   "title": "Jiminy",
   "version": "0.2.2",
-  "description": "A Browser Extension for detecting disinformation while using online social medias",
+  "description": "A Browser Extension that helps you spot disinformation and harmful content on social media",
   "type": "module",
   "private": true,
   "scripts": {
